feat: edit project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fauzan-portfolio-project",
+  "name": "fauzan-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
